erDiagram
    %% ========================================
    %% 기준/마스터 계층 (Canonical Layer)
    %% ========================================

    insurer {
        int insurer_id PK
        varchar insurer_code UK "보험사 코드 (UNIQUE)"
        varchar insurer_name "보험사명"
        varchar insurer_name_eng "보험사 영문명"
        boolean is_active "활성 여부"
        timestamp created_at
        timestamp updated_at
    }

    product {
        int product_id PK
        int insurer_id FK
        varchar product_code UK "상품 코드 (UNIQUE within insurer)"
        varchar product_name "상품명"
        varchar product_type "상품 유형 (암보험, 건강보험 등)"
        date sale_start_date "판매 시작일"
        date sale_end_date "판매 종료일"
        boolean is_active "활성 여부"
        jsonb meta "메타 정보"
        timestamp created_at
        timestamp updated_at
    }

    coverage_standard {
        int coverage_id PK
        varchar coverage_code UK "신정원 통일 담보 코드 (CANONICAL)"
        varchar coverage_name "표준 담보명"
        varchar domain "도메인 (암/뇌/심혈관/상해 등)"
        varchar coverage_type "담보 유형 (진단/수술/입원/통원 등)"
        int priority "도메인 내 우선순위 (메인담보=1)"
        boolean is_main "메인 담보 여부"
        jsonb meta "추가 속성"
        timestamp created_at
        timestamp updated_at
    }

    document {
        int document_id PK
        int product_id FK
        varchar document_type "문서 유형 (약관/사업방법서/요약서/설계서)"
        varchar document_version "문서 버전"
        varchar file_path "원본 파일 경로"
        varchar file_hash "파일 해시"
        date effective_date "효력 발생일"
        int doc_type_priority "문서 우선순위 (약관=1, 사업방법서=2...)"
        jsonb meta "메타 정보"
        timestamp created_at
        timestamp updated_at
    }

    %% ========================================
    %% 매핑/정규화 계층 (Normalization Layer)
    %% ========================================

    coverage_alias {
        int alias_id PK
        int insurer_id FK
        int coverage_id FK "→ coverage_standard"
        varchar insurer_coverage_name "보험사별 담보명"
        varchar insurer_coverage_code "보험사별 담보 코드"
        varchar confidence "매핑 신뢰도 (high/medium/low)"
        varchar mapping_method "매핑 방법 (manual/rule/llm)"
        timestamp created_at
        timestamp updated_at
    }

    coverage_code_alias {
        int code_alias_id PK
        int coverage_id FK "→ coverage_standard"
        varchar legacy_code "레거시/변형 코드"
        varchar code_type "코드 유형"
        timestamp created_at
    }

    coverage_subtype {
        int subtype_id PK
        int coverage_id FK "→ coverage_standard"
        varchar subtype_name "세부 유형 (경계성종양, 제자리암 등)"
        varchar subtype_code "세부 유형 코드"
        jsonb rules "적용 규칙"
        timestamp created_at
    }

    coverage_condition {
        int condition_id PK
        int coverage_id FK "→ coverage_standard"
        varchar condition_type "조건 유형 (지급/감액/면책)"
        text condition_text "조건 텍스트"
        jsonb condition_rules "조건 규칙 (구조화)"
        timestamp created_at
    }

    %% ========================================
    %% 문서/청크 계층 (Document & Chunk Layer)
    %% ========================================

    chunk {
        int chunk_id PK
        int document_id FK
        int page_number "페이지 번호"
        text chunk_text "청크 본문"
        vector embedding "임베딩 벡터 (pgvector)"
        boolean is_synthetic "합성 청크 여부"
        int synthetic_source_chunk_id "원본 청크 ID (synthetic인 경우)"
        jsonb meta "메타 정보 (synthetic_type, synthetic_method, entities 등)"
        timestamp created_at
        timestamp updated_at
    }

    %% ========================================
    %% Extraction/Evidence 계층
    %% ========================================

    chunk_entity {
        int entity_id PK
        int chunk_id FK
        varchar entity_type "엔티티 유형 (coverage/amount/disease/surgery 등)"
        varchar coverage_code "담보 코드 (coverage_standard 참조)"
        jsonb entity_value "엔티티 값 (구조화)"
        varchar extraction_method "추출 방법"
        float confidence "신뢰도"
        timestamp created_at
    }

    amount_entity {
        int amount_id PK
        int chunk_id FK
        varchar coverage_code FK "→ coverage_standard"
        varchar context_type "컨텍스트 (payment/count/limit)"
        numeric amount_value "금액 (숫자)"
        varchar amount_text "금액 (원문)"
        varchar amount_unit "단위 (원/만원 등)"
        varchar extraction_method "추출 방법"
        float confidence "신뢰도"
        jsonb meta "추가 정보"
        timestamp created_at
    }

    %% ========================================
    %% 관계 정의 (Relationships)
    %% ========================================

    insurer ||--o{ product : "has"
    product ||--o{ document : "has"
    document ||--o{ chunk : "contains"

    coverage_standard ||--o{ coverage_alias : "mapped_by"
    coverage_standard ||--o{ coverage_code_alias : "has_alias"
    coverage_standard ||--o{ coverage_subtype : "has_subtype"
    coverage_standard ||--o{ coverage_condition : "has_condition"

    insurer ||--o{ coverage_alias : "defines"
    coverage_standard ||--o{ chunk_entity : "referenced_by"
    coverage_standard ||--o{ amount_entity : "referenced_by"

    chunk ||--o{ chunk_entity : "has"
    chunk ||--o{ amount_entity : "has"
    chunk ||--o{ chunk : "spawns (synthetic)"
